# IPAG

./: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  README.md  pyproject.toml
R/: runShiny.R
api/: __main__.py  network.py
example/: genotypes.vcf
frontend/: .babelrc  package-lock.json  package.json  webpack.config.js
frontend/src/: index.js
frontend/src/containers/: App.js  HomeScreen.js
inst/shinyapp/: app.R
inst/shinyapp/www/: ipag.js
inst/test/public/: index.html
web/: package.json
web/IPAG/: .umirc.js  package.json
web/IPAG/mock/: job.js
web/IPAG/src/layouts/: Header.js  index.css  index.js
web/IPAG/src/pages/: index.css  index.less
web/IPAG/src/pages/gs/components/: GS.css  GS.js
web/IPAG/src/pages/jobs/: constants.js  index.js
web/IPAG/src/pages/jobs/components/: Jobs.js
web/IPAG/src/pages/jobs/services/: jobs.js
web/IPAG/src/pages/products/components/: ProductList.js
web/mock/: user.js
web/src/components/: CardList.js
web/src/layouts/: index.css  index.js
web/src/pages/: 404.js  index.js
web/src/pages/gs/: index.js  model.js
web/src/pages/gs/components/: GS.less
web/src/pages/jobs/: model.js
web/src/pages/jobs/components/: Jobs.css
web/src/pages/products/: index.js  products.css
web/src/pages/users/: index.css  index.js
web/src/pages/users/components/: Users.css
