[tool.poetry]
name = "pyipag"
version = "0.1.0"
description = ""
authors = ["Haohao Zhang <hyacz@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
psutil = "^5.6"

[tool.poetry.dev-dependencies]
pyinstaller = "^3.5"
macholib = {version = "^1.11", platform = "darwin"}
pefile = {version = "^2019.4", platform = "win32"}
pywin32-ctypes = {version = "^0.2.0", platform = "win32"}
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


# [[tool.poetry.source]]
# name = "tuna-pypi"
# url = "https://pypi.tuna.tsinghua.edu.cn/simple"